--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
       <div class="media-icons">
         <a href="https://www.linkedin.com/in/hkamesh/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://x.com/?lang=en"><i class="fab fa-twitter"></i></a>
         <a href="https://github.com/hkamesh" target="_blank"><i class="fab fa-github"></i></a>
       </div>
     </div>
@@ -59,7 +59,7 @@
       <div class="title"><span>About Me</span></div>
       <div class="about-details">
         <div class="left">
-          <img src="images/about.jpg" alt="" />
+          <img src="about.jpg" alt="" />
         </div>
         <div class="right">
           <div class="topic">Building the Future — Full Stack, AI, and Beyond</div>
