--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
       <div class="media-icons">
         <a href="https://www.linkedin.com/in/hkamesh/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://x.com/?lang=en"><i class="fab fa-twitter"></i></a>
+        <a href="https://x.com/?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
         <a href="https://github.com/hkamesh" target="_blank"><i class="fab fa-github"></i></a>
       </div>
     </div>
