--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
         <div class="right">
           <div class="topic">Building the Future — Full Stack, AI, and Beyond</div>
           <p>
-            Hello! I'm Kamesh H, Currently pursuing Bachelor of computer science engineering 2nd Year, a passionate Full Stack Developer and AI enthusiast, committed to building innovative solutions that make a meaningful impact. With a strong foundation in both backend and frontend development, I enjoy tackling complex challenges and bringing creative ideas to life through technology.
-I’m currently honing my skills in Full Stack Development and Artificial Intelligence, and I'm always looking for ways to push the boundaries of what’s possible. My journey is driven by a curiosity to explore new technologies and a desire to solve real-world problems. Whether it's creating interactive mobile apps, building scalable web applications, or diving into AI and machine learning, I’m constantly learning and growing.
-As I continue to grow in my career, I am excited about the opportunities that lie ahead and am always open to new collaborations and challenges.
+            👋 Hello! I'm Kamesh H, currently pursuing my 3rd year of B.Tech in Computer Science and Engineering. I'm a passionate Full Stack Developer and AI enthusiast, dedicated to building innovative solutions that create meaningful impact.
+With a solid foundation in both frontend and backend development, I thrive on solving complex challenges and bringing creative ideas to life through technology. I'm continuously refining my expertise in Full Stack Development and Artificial Intelligence, always pushing the boundaries of what's possible.
+My journey is fueled by a deep curiosity to explore cutting-edge technologies and a drive to solve real-world problems. Whether it's developing interactive mobile apps, crafting scalable web platforms, or diving into the world of machine learning, I'm always learning, experimenting, and growing.
+As I move forward in my career, I'm excited about upcoming opportunities and remain open to collaborations, internships, and impactful projects that challenge and inspire me.
           </p>
           <div class="button">
             <a href="https://www.linkedin.com/in/hkamesh/" 
@@ -128,7 +129,7 @@ As I continue to grow in my career, I am excited about the opportunities that li
             <i class="fas fa-desktop"></i>
           </div>
           <div class="topic">Online Bus Ticket Booking Website</div>
-          <p>Developing a full-fledged bus ticket booking portal with user authentication, real-time seat display, Razorpay integration, and ticket generation. Aimed at nationwide scalability, this project demonstrates strong backend and frontend development skills along with secure payment API integration.</p>
+          <p>Developing a full-fledged bus ticket booking portal with user authentication, and ticket generation. Aimed at nationwide scalability, this project demonstrates strong backend and frontend development skills along with secure payment API integration.</p>
         </div>
         <div class="box">
           <div class="icon">
