--- a/index.html
+++ b/index.html
@@ -54,123 +54,175 @@
   </section>
 
   <!-- About Section Start -->
-  <section class="about" id="about">
-    <div class="content">
-      <div class="title"><span>About Me</span></div>
-      <div class="about-details">
-        <div class="left">
-          <img src="about.jpg" alt="" />
+<section class="about" id="about" style="padding: 60px 0; background-color: #f9f9f9;">
+  <div class="content" style="max-width: 1100px; margin: auto;">
+    <div class="title"><span>About Me</span></div>
+
+    <div class="about-details" style="display: flex; flex-wrap: wrap; gap: 30px;">
+      
+      <!-- Left Box: Quote + Skills -->
+      <div class="left" style="flex: 1; min-width: 300px; background: #ffffff; padding: 30px; box-shadow: 0 0 10px rgba(0,0,0,0.05); border-radius: 10px;">
+        <blockquote style="font-style: italic; color: #444; border-left: 4px solid #007bff; padding-left: 15px; margin-bottom: 20px;">
+          “Code is not just what I write — it’s how I think, build, and create value for the world.”
+        </blockquote>
+        <ul style="list-style: none; padding-left: 0; line-height: 2;">
+          <li>💻 Full Stack Web & App Developer</li>
+          <li>🤖 AI / ML Practitioner</li>
+          <li>🚀 Open Source Contributor</li>
+          <li>🌐 Tech for Impact Enthusiast</li>
+        </ul>
+      </div>
+
+      <!-- Right Box: Bio -->
+      <div class="right" style="flex: 2; min-width: 300px; background: #ffffff; padding: 30px; box-shadow: 0 0 10px rgba(0,0,0,0.05); border-radius: 10px;">
+        <div class="topic" style="font-size: 20px; font-weight: 600; margin-bottom: 15px;">Building the Future — Full Stack, AI, and Beyond</div>
+        <p style="color: #333; line-height: 1.7;">
+          👋 Hello! I'm <strong>Kamesh H</strong>, currently pursuing my 3rd year of B.Tech in Computer Science and Engineering. I'm a passionate Full Stack Developer and AI enthusiast, dedicated to building innovative solutions that create meaningful impact.<br><br>
+          With a solid foundation in both frontend and backend development, I thrive on solving complex challenges and bringing creative ideas to life through technology. I'm continuously refining my expertise in Full Stack Development and Artificial Intelligence, always pushing the boundaries of what's possible.<br><br>
+          My journey is fueled by a deep curiosity to explore cutting-edge technologies and a drive to solve real-world problems. Whether it's developing interactive mobile apps, crafting scalable web platforms, or diving into the world of machine learning, I'm always learning, experimenting, and growing.<br><br>
+          As I move forward in my career, I'm excited about upcoming opportunities and remain open to collaborations, internships, and impactful projects that challenge and inspire me.
+        </p>
+        <div class="button" style="margin-top: 20px;">
+          <a href="https://www.linkedin.com/in/hkamesh/" target="_blank" rel="noopener noreferrer">
+            <button style="padding: 10px 20px; background-color: #007bff; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
+              Download CV
+            </button>
+          </a>
         </div>
-        <div class="right">
-          <div class="topic">Building the Future — Full Stack, AI, and Beyond</div>
-          <p>
-            👋 Hello! I'm Kamesh H, currently pursuing my 3rd year of B.Tech in Computer Science and Engineering. I'm a passionate Full Stack Developer and AI enthusiast, dedicated to building innovative solutions that create meaningful impact.
-With a solid foundation in both frontend and backend development, I thrive on solving complex challenges and bringing creative ideas to life through technology. I'm continuously refining my expertise in Full Stack Development and Artificial Intelligence, always pushing the boundaries of what's possible.
-My journey is fueled by a deep curiosity to explore cutting-edge technologies and a drive to solve real-world problems. Whether it's developing interactive mobile apps, crafting scalable web platforms, or diving into the world of machine learning, I'm always learning, experimenting, and growing.
-As I move forward in my career, I'm excited about upcoming opportunities and remain open to collaborations, internships, and impactful projects that challenge and inspire me.
-          </p>
-          <div class="button">
-            <a href="https://www.linkedin.com/in/hkamesh/" 
-       target="_blank" rel="noopener noreferrer" ></p><button>Download CV</button></a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+  <!-- My Skills Section Start -->
+<section class="skills" id="skills">
+  <div class="content">
+    <div class="title"><span>My Skills</span></div>
+    <div class="skills-details">
+      <div class="text">
+        <div class="topic">Empowering Innovation with Modern Technologies</div>
+        <p>
+          I specialize in building intelligent, user-centric digital solutions by combining Full Stack Web Development, AI & ML capabilities, and Mobile App Engineering. My skillset spans across the entire development lifecycle—from responsive UIs and scalable backends to smart systems powered by modern AI tools and APIs.
+        </p>
+        <div class="experience">
+          <div class="num">47+</div>
+          <div class="exp">
+            Technologies<br />
+            Mastered
           </div>
         </div>
       </div>
-    </div>
-  </section>
 
-  <!-- My Skill Section Start -->
-  <section class="skills" id="skills">
-    <div class="content">
-      <div class="title"><span>My Skills</span></div>
-      <div class="skills-details">
-        <div class="text">
-          <div class="topic">Mastering Technologies to Drive Innovation</div>
-          <p>My skills reflect my knowledge and passion for creating innovative solutions in Full Stack Development, AI, and Mobile App Development. With a strong foundation in both front-end and back-end technologies, along with hands-on experience in building real-world applications, I am equipped to tackle diverse challenges and bring ideas to life.</p>
-          <div class="experience">
-            <div class="num">47</div>
-            <div class="exp">
-              Skills  <br />
-              Known
-            </div>
-          </div>
-        </div>
-        <div class="boxes">
-          <div class="box">
-            <div class="topic">Full Stack Development</div>
-            <div class="per">90%</div>
-          </div>
-          <div class="box">
-            <div class="topic">AIML</div>
-            <div class="per">100%</div>
-          </div>
-          <div class="box">
-            <div class="topic">Networking & Communication</div>
-            <div class="per">70%</div>
-          </div>
-          <div class="box">
-            <div class="topic">Tools & Technologies </div>
-            <div class="per">80%</div>
-          </div>
-          <div class="box">
-            <div class="topic">Mobile Development</div>
-            <div class="per">70%</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="services" id="services">
-    <div class="content">
-      <div class="title"><span>My Projects</span></div>
       <div class="boxes">
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-desktop"></i>
-          </div>
-          <div class="topic">Online Bus Ticket Booking Website</div>
-          <p>Developing a full-fledged bus ticket booking portal with user authentication, and ticket generation. Aimed at nationwide scalability, this project demonstrates strong backend and frontend development skills along with secure payment API integration.</p>
+          <div class="topic">Full Stack Web Development</div>
+          <div class="per">95%</div>
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-robot"></i>
-          </div>
-          <div class="topic">AI-Powered Intelligent Chatbot</div>
-          <p>Developed a multi-functional AI chatbot that integrates natural language processing, real-time Wikipedia search, mathematical computation, and OpenAI-driven conversations through a Flask web interface. </p>
+          <div class="topic">Artificial Intelligence & Machine Learning</div>
+          <div class="per">100%</div>
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-comments"></i>
-
-          </div>
-          <div class="topic">Multiclient Chat System using Sockets & Threads</div>
-          <p>Designed and implemented a real-time chat application enabling multiple clients to connect and communicate through a central server using sockets and Python threads. The server handles concurrent client connections and ensures message broadcasting across all clients efficiently.</p>
+          <div class="topic">Python, Flask & Django</div>
+          <div class="per">90%</div>
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-robot"></i>
-
-          </div>	
-          <div class="topic">AI-Powered Vehicle Tracking & Monitoring System</div>
-          <p>This project involves designing an intelligent system that can automatically detect and recognize vehicle number plates using OCR, track vehicles in real-time, and display the results through an intuitive UI. It is being developed as part of a 3-member team and combines computer vision, machine learning, and real-time data display.</p>
+          <div class="topic">JavaScript, React, Bootstrap</div>
+          <div class="per">85%</div>
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-chart-line"></i>
-          </div>
-          <div class="topic">Real-Time Stock Price Tracker</div>
-          <p>Built a real-time stock price tracking tool that fetches live market data using public financial APIs and displays current trends for selected companies. Integrated periodic updates and historical price analysis to help users visualize stock performance.</p>
+          <div class="topic">API Integration & Deployment</div>
+          <div class="per">95%</div>
         </div>
         <div class="box">
-          <div class="icon">
-            <i class="fas fa-search"></i>
-          </div>
-          <div class="topic">Niche Search Engine</div>
-          <p>This project focuses on building a custom search engine tailored specifically for academic research, technical blogs, and coding resources. Unlike generic search engines, this niche search tool aims to deliver highly relevant, curated results to developers, students, and researchers.</p>
+          <div class="topic">Cloud & GitHub CI/CD</div>
+          <div class="per">80%</div>
+        </div>
+        <div class="box">
+          <div class="topic">Mobile App Development (Flutter/Firebase)</div>
+          <div class="per">75%</div>
+        </div>
+        <div class="box">
+          <div class="topic">Tools & Platforms (VSCode, Postman, Docker)</div>
+          <div class="per">85%</div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+  <section class="services" id="services">
+  <div class="content">
+    <div class="title"><span>My Projects</span></div>
+    <div class="boxes">
+
+      <div class="box">
+        <div class="icon">
+          <i class="fas fa-desktop"></i>
+        </div>
+        <div class="topic">Online Bus Ticket Booking Website</div>
+        <p>
+          Designed a full-stack bus ticket booking platform featuring real-time seat display, user authentication, and automated ticket generation. Integrated Razorpay payment gateway and ensured backend scalability, making the system ready for deployment across regional or national operators.
+        </p>
+      </div>
+
+      <div class="box">
+        <div class="icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <div class="topic">AI-Powered Intelligent Chatbot</div>
+        <p>
+          Built a web-based AI chatbot using Flask that handles OpenAI-powered conversations, Wikipedia search, real-time mathematical calculations, and multilingual support. Demonstrates expertise in NLP, API handling, and AI integration for intelligent assistance systems.
+        </p>
+      </div>
+
+      <div class="box">
+        <div class="icon">
+          <i class="fas fa-comments"></i>
+        </div>
+        <div class="topic">Multiclient Chat System (Sockets & Threads)</div>
+        <p>
+          Developed a concurrent chat system using Python sockets and threading that enables real-time communication among multiple clients. Designed for scalability, with future enhancements planned for GUI (Tkinter), authentication, message encryption, and chat history logging.
+        </p>
+      </div>
+
+      <div class="box">
+        <div class="icon">
+          <i class="fas fa-car"></i>
+        </div>	
+        <div class="topic">AI-Powered Vehicle Tracking & Monitoring System</div>
+        <p>
+          Collaborating in a 3-member team to develop a smart surveillance solution that uses OCR for automated number plate recognition and updates vehicle logs in a MySQL database. Combines computer vision, real-time processing, and intuitive dashboard UI for smart city applications.
+        </p>
+      </div>
+
+      <div class="box">
+        <div class="icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <div class="topic">Real-Time Stock Price Tracker</div>
+        <p>
+          Created a real-time stock monitoring tool using public financial APIs to fetch live prices and plot historical trends with Chart.js. Highlights strengths in Python scripting, API integration, real-time data visualization, and deploying finance tools through GitHub Pages.
+        </p>
+      </div>
+      <div class="box">
+  <div class="icon">
+    <i class="fas fa-file-pdf"></i>
+  </div>
+  <div class="topic">AI-Powered PDF Intelligence Tool</div>
+  <p>
+    Developed a smart PDF analyzer that extracts readable content from uploaded documents, generates summaries, identifies keywords, and supports batch uploads. Integrated refined UI for user-friendly document insights. Built using Python, Flask, and NLP techniques.
+  </p>
+</div>
+
+
+    </div>
+  </div>
+</section>
+
 
    <section class="contact" id="contact">
     <div class="content">
